--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"rocket-code/shopify": "~1.0"
+		"rocket-code/shopify": "~1.0",
+		"chrisbjr/api-guard": "1.0.*"
 	},
 	"autoload": {
 		"classmap": [
